test/ppx_irmin/deriver/errors/unsupported_tuple_size.ml
type t = unit * unit * unit * unit [@@deriving irmin]
